[project]
name = "controlvectors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nltk",
    "pandas",
    "openai",
    "numpy",
    "torch",
    "transformers",
    "repeng",
    "vaderSentiment",
    "gradio",
    "typing_extensions",
    "openai",
    "accelerate",
    "huggingface_hub"
]
